syntax = "proto3";

package yourpackage;

option go_package = "github.com/kishorens18";

import "google/protobuf/any.proto";
import "google/protobuf/empty.proto";
message Application {
    string id =1;
    string Name = 2;
    repeated Request Request = 3;
}

message Request {
    string Name = 1;
    string Key = 2;
    google.protobuf.Any Value = 3;
}
service MyService {
    rpc InsertData(Request) returns (google.protobuf.Empty);
    rpc GetData(GetDataRequest) returns(GetDataResponse);
    rpc AddConfig(AddConfigRequest)returns(google.protobuf.Empty);

}
message AddConfigRequest {
    string id =1;
    string Key = 2;
    google.protobuf.Any Value = 3;
}

message GetDataRequest {
    string id = 1;
    string key = 2;
}
message GetDataResponse {
    repeated Application GDRA = 1;
}